--- a/frappe/templates/doc.html
+++ b/frappe/templates/doc.html
@@ -16,7 +16,7 @@
 					{%- elif banner_image -%}
 					<img src='{{ banner_image }}'>
 					{%- else -%}
-					<span>{{ (frappe.get_hooks("brand_html") or [_("Home")])[0] }}</span>
+					<span>{{ (frappe.get_hooks("brand_html") or ['<img src="/assets/sovisindia/images/SI-PLANE-BRANDING-DARK.svg">'])[0] }}</span>
 					{%- endif -%}
 				</a>
 			</div>
