--- a/frappe/templates/styles/standard.css
+++ b/frappe/templates/styles/standard.css
@@ -8,14 +8,15 @@
 		border-radius: 8px;
 		max-width: 8.3in;
 		min-height: 11.69in;
-		padding: 0.75in;
+		padding: 0.75cm;
 		margin: auto;
 		color: var(--gray-900);
 	}
 
 	.print-format.landscape {
 		max-width: 11.69in;
-		padding: 0.2in;
+		min-height: 8.3in;
+		padding: 0.75cm;
 	}
 
 	.page-break {
