--- a/frappe/public/scss/desk/print_preview.scss
+++ b/frappe/public/scss/desk/print_preview.scss
@@ -59,8 +59,13 @@
 	border-radius: var(--border-radius);
 }
 
+.print-preview.landscape {
+	max-width: 11.69in;
+	min-height: 8.3in;
+}
+
 .print-format-skeleton {
-	padding: 0.75in;
+	padding: 0.75cm;
 	min-height: 11.69in;
 	position: relative;
 
@@ -124,7 +129,7 @@
 		position: absolute;
 		bottom: 0;
 		left: 0;
-		padding: 0.75in;
+		padding: 0.75cm;
 		width: 100%;
 
 		.skeleton-card {
