--- a/frappe/public/scss/website/footer.scss
+++ b/frappe/public/scss/website/footer.scss
@@ -1,6 +1,5 @@
 .web-footer {
-	padding: 3rem 0;
-	min-height: 140px;
+	padding: 10px 0 2px 0;
 	background-color: var(--fg-color);
 	border-top: 1px solid $border-color;
 	margin-top: auto;
